# core-crypto

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .swiftlint.yml  ARCHITECTURE.md  CHANGELOG-HUMAN.md  CHANGELOG.md  CHANGELOG.tpl  CLAUDE.md  CODEOWNERS  CRYPTO_DEPENDENCIES.md  Cargo.toml  DEVELOP.md  FFI.md  KEYSTORE_IMPLEMENTATION.md  Makefile  Package.swift  README.md  ROADMAP.tasks  UNRELEASED_CHANGES.md  WASM_ISSUES.md  cliff.toml  codecov.yml  corecrypto.html  corecrypto.js  corecrypto.wasm  crates.js  deny.toml  help.html  index.md  package.json  rust-toolchain.toml  search-index.js  settings.html  src-files.js  tarpaulin.toml
anycrypto/: Cargo.toml
anycrypto/src/: error.rs  ffi.rs  lib.rs
anycrypto/src/central/: config.rs  mod.rs
cli/: Cargo.toml  key_package.mls
cli/src/: backend.rs  keystore.rs  main.rs
core-ds/: .env  Cargo.toml
core-ds/migrations/: 20211208122144_schema.sql
core-ds/src/: config.rs  error.rs  identity_policy.rs  main.rs
core-ds/src/gql/: gql_error.rs  mod.rs
core-ds/src/models/: client_keypackages.rs  clients.rs  conversation_members.rs  conversations.rs  mod.rs  prelude.rs
core-ds/src/rest/: clients.rs  conversations.rs  mod.rs
core-ds/src/ws/: client.rs  mod.rs  server.rs
crypto/: Cargo.toml  README.md  build.rs  ffi.udl  uniffi.toml
crypto-attributes/: Cargo.toml  README.md
crypto-attributes/src/: durable.rs  lib.rs
crypto-ffi/: Cargo.toml  Makefile.toml  README.md  build.rs  build_ts.ts  corecrypto-make.toml  uniffi-android.toml  uniffi.toml
crypto-ffi/.cargo/: config.toml
crypto-ffi/bindings/: .editorconfig  .gitignore  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
crypto-ffi/bindings/android/: build.gradle.kts  gradle.properties  ndk.version  proguard-rules.pro
crypto-ffi/bindings/android-interop/: build.gradle.kts
crypto-ffi/bindings/gradle/: libs.versions.toml
crypto-ffi/bindings/js/: .eslintrc.cjs  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  Cargo.rust-modules.toml  CoreCrypto.test.ts  CoreCrypto.ts  CoreCryptoContext.ts  README.md  bunfig.toml  eslint.config.ts  jest.config.js  package.json  rollup.config.js  rollup.config.test.js  tsconfig.json  tsconfig.native.json  (+6 more)
crypto-ffi/src/: CoreCrypto.udl  bytes_wrapper.rs  cipher_suite.rs  ciphersuite.rs  client_id.rs  configuration.rs  credential.rs  credential_ref.rs  credential_type.rs  crl.rs  database_key.rs  decrypted_message.rs  e2ei.rs  ephemeral.rs  external_sender.rs  generic.rs  key_package.rs  lib.rs  logger.rs  metadata.rs  mls_transport.rs  pki_env.rs  pki_environment.rs  proteus.rs  signature_scheme.rs  timestamp.rs  uniffi_support.rs  wasm.rs  wasm_utils.rs
crypto-ffi/support/: gxx_personality_v0_stub.cpp
crypto-ffi/tests/: bindings_tests.rs
crypto-macros/: Cargo.toml
crypto-macros/src/: debug.rs  debug_bytes.rs  durable.rs  idempotent.rs  lib.rs
crypto/benches/: commit.rs  create_group.rs  encryption.rs  group_info.rs  join_large_group.rs  key_package.rs  mls_proteus.rs  proposal.rs  public_group_state.rs  transaction.rs  utils.rs
crypto/src/: build_metadata.rs  bytes_wrapper.rs  central.rs  client.rs  commit_delay.rs  context.rs  conversation.rs  credential.rs  ephemeral.rs  error.rs  external_commit.rs  external_proposal.rs  ffi.rs  group_store.rs  identifiers.rs  identity.rs  immutable_database.rs  lib.rs  member.rs  message.rs  mls_crypto_provider.rs  obfuscate.rs  proposal.rs  proteus.rs  test_fixture_utils.rs  test_utils.rs
crypto/tests/: group_info.rs  increment_message.rs
decode/: Cargo.toml  README.md  all.html  enum.Command.html  enum.ProteusMessage.html  fn.main.html  index.html  struct.App.html  struct.ProteusCipherMessage.html  struct.ProteusEnvelope.html  struct.ProteusPreKeyBundle.html  struct.ProteusPrekeyMessage.html
decode/src/: main.rs
e2e-identity/: Cargo.toml  README.md  build.rs
e2e-identity/src/: builder.rs  e2e_identity.rs  error.rs  lib.rs  pki.rs  pki_env.rs  pki_env_hooks.rs  sample.rs  types.rs  utils.rs
e2e-identity/tests/: api.rs  e2e.rs
extras/core-ds/: Cargo.toml  README.md
extras/interop/: Cargo.toml
extras/keystore-regression-versions/: Cargo.toml
extras/wasm-browser-run/: Cargo.toml
extras/wasm-browser-test-runner/: Cargo.toml
extras/webdriver-installation/: Cargo.toml
interop/: Cargo.toml  README.md  all.html  constant.CIPHERSUITE_IN_USE.html  constant.MLS_CONVERSATION_ID.html  constant.MLS_MAIN_CLIENTID.html  constant.ROUNDTRIP_MSG_AMOUNT.html  constant.TEST_SERVER_PORT.html  constant.TEST_SERVER_URI.html  fn.create_mls_clients.html  fn.create_proteus_clients.html  fn.main.html  fn.run_mls_test.html  fn.run_proteus_test.html  fn.run_test.html  index.html
interop/clients/: enum.EmulatedClientType.html  index.html  struct.EmulatedClientProtocol.html  trait.EmulatedClient.html  trait.EmulatedE2eIdentityClient.html  trait.EmulatedMlsClient.html  trait.EmulatedProteusClient.html
interop/src/: main.rs  util.rs
interop/util/: index.html  sidebar-items.js  struct.MlsTransportSuccessProvider.html  struct.RunningProcess.html  trait.MlsTransportTestExt.html
keystore/: CHANGELOG.md  Cargo.toml  README.md  build.rs
keystore-dump/: Cargo.toml  README.md
keystore-dump/src/: main.rs
keystore/.cargo/: config.toml
keystore/benches/: read.rs  write.rs
keystore/src/: database_key.rs  error.rs  hash.rs  lib.rs  migrations.rs  mls.rs  proteus.rs  transaction.rs
keystore/tests/: common.rs  general.rs  mls.rs  proteus.rs  searchable_entities.rs  z_entities.rs
mls-library-benches/: Cargo.toml  README.md
mls-library-benches/benches/: decrypt.rs
mls-library-benches/src/: lib.rs  main.rs  mls_rs.rs  openmls.rs
mls-provider/: Cargo.toml  README.md
mls-provider/src/: crypto_provider.rs  error.rs  lib.rs  pki.rs
mls-provider/tests/: crypto.rs  fixtures.rs  randomness.rs
mls_provider/: Cargo.toml
mls_provider/src/: lib.rs
obfuscate/: Cargo.toml  README.md
obfuscate/src/: lib.rs
test-wire-server/: Cargo.toml
test-wire-server/src/: main.rs  non_wasm.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+67617 files in other folders)
