[workspace]
members = [
    "crypto",
    "crypto-ffi",
    "crypto-attributes",
    "keystore",
    "keystore-dump",
    "mls-provider",
    "interop"
, "decode"]
exclude = [
    "extras/webdriver-installation",
    "extras/keystore-regression-versions"
]
resolver = "2"

[workspace.dependencies]
async-lock = "3.4"
async-recursion = "1"
async-std = "1.13"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.6"
cfg-if = "1.0"
const_format = "0.2"
core-crypto = { path = "crypto" }
core-crypto-keystore = { path = "keystore" }
core-crypto-attributes = { path = "crypto-attributes" }
derive_more = { version = "0.99", features = ["from", "into", "deref", "deref_mut"] }
futures-util = "0.3"
hex = "0.4"
idb = "0.6"
indexmap = "2"
itertools = "0.13"
log = { version = "0.4", features = ["kv"] }
log-reload = "0.1.0"
mls-crypto-provider = { path = "mls-provider" }
pem = "3.0"
rand = { version = "0.8", features = ["getrandom"] }
rexie = "0.6.1"  # TODO: remove once migration tests have been moved to rexie
schnellru = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tls_codec = "0.4.1"
uniffi = "0.28"
url = "2.5"
uuid = "1.11"
x509-cert = "0.2"
zeroize = "1.8"

# our OpenMLS fork
openmls = { git = "https://github.com/wireapp/openmls", rev = "6d2f5a2046fc12aca602af207e650b94848f09ff", version = "1" }
openmls_traits = { git = "https://github.com/wireapp/openmls", rev = "6d2f5a2046fc12aca602af207e650b94848f09ff", version = "0.2" }
openmls_basic_credential = { git = "https://github.com/wireapp/openmls", rev = "6d2f5a2046fc12aca602af207e650b94848f09ff", version = "0.2" }
openmls_x509_credential = { git = "https://github.com/wireapp/openmls", rev = "6d2f5a2046fc12aca602af207e650b94848f09ff", version = "0.2" }

# proteus
proteus-traits = { git = "https://github.com/wireapp/proteus", tag = "v2.1.1" }
proteus-wasm = { git = "https://github.com/wireapp/proteus", tag = "v2.1.1" }

wire-e2e-identity = { git = "https://github.com/wireapp/rusty-jwt-tools", rev = "751f281ec75a6ae113584659b4b48940407c50f8", version = "0.9" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
# ! Important: Do NOT enable stripping.
# ! This will cause the FFI to stop working because UniFFI stores the Rust <-> cdylib mapping
# ! in the `.strtab` section of the executable. Stripping this causes everything to stop functioning.
strip = false
# panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3
