[workspace]
members = [
    "crypto",
    "crypto-ffi",
    "crypto-macros",
    "keystore",
    "keystore-dump",
    "mls-provider",
    "interop",
    "decode",
]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[workspace.dependencies]
async-channel = "2.3.1"
async-lock = "3.4"
async-recursion = "1"
async-std = "1.13"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.9"
cfg-if = "1.0"
console_error_panic_hook = "0.1.7"
const_format = "0.2"
core-crypto = { path = "crypto" }
core-crypto-keystore = { path = "keystore" }
core-crypto-macros = { path = "crypto-macros" }
derive_more = { version = "0.99", features = [
    "from",
    "into",
    "deref",
    "deref_mut",
] }
futures-util = "0.3"
hex = "0.4"
idb = "0.6"
indexmap = "2"
itertools = "0.13"
log = { version = "0.4", features = ["kv_serde"] }
log-reload = "0.1.2"
mls-crypto-provider = { path = "mls-provider" }
pem = "3.0"
rand = { version = "0.8", features = ["getrandom"] }
rexie = "0.6.1" # TODO: remove once migration tests have been moved to rexie
schnellru = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
tls_codec = "0.4.2"
uniffi = "0.29"
url = "2.5"
uuid = "1.16"
x509-cert = "0.2"
zeroize = "1.8"

# our OpenMLS fork
openmls = { git = "https://github.com/wireapp/openmls", rev = "c47c884649b2403a180407632470a42b768ce2a4", version = "1" }
openmls_traits = { git = "https://github.com/wireapp/openmls", rev = "c47c884649b2403a180407632470a42b768ce2a4", version = "0.2" }
openmls_basic_credential = { git = "https://github.com/wireapp/openmls", rev = "c47c884649b2403a180407632470a42b768ce2a4", version = "0.2" }
openmls_x509_credential = { git = "https://github.com/wireapp/openmls", rev = "c47c884649b2403a180407632470a42b768ce2a4", version = "0.2" }

# proteus
proteus-traits = { git = "https://github.com/wireapp/proteus", tag = "v2.1.1" }
proteus-wasm = { git = "https://github.com/wireapp/proteus", tag = "v2.1.1" }

wire-e2e-identity = { git = "https://github.com/wireapp/rusty-jwt-tools", tag = "v0.13.0" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
# ! Important: Do NOT enable stripping.
# ! This will cause the FFI to stop working because UniFFI stores the Rust <-> cdylib mapping
# ! in the `.strtab` section of the executable. Stripping this causes everything to stop functioning.
strip = false
# panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3
