[workspace]
members = [
  "crypto",
  "crypto-ffi",
  "crypto-macros",
  "e2e-identity",
  "keystore",
  "keystore-dump",
  "mls-provider",
  "interop",
  "decode",
  "obfuscate",
  "test-wire-server",
]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[workspace.dependencies]
async-channel = "2.5.0"
async-lock = "3.4"
async-recursion = "1"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.10"
cfg-if = "1.0"
console_error_panic_hook = "0.1.7"
const_format = "0.2"
core-crypto = { path = "crypto" }
core-crypto-keystore = { path = "keystore" }
core-crypto-macros = { path = "crypto-macros" }
wire-e2e-identity = { path = "e2e-identity" }
rusty-jwt-tools = { version = "0.13.0", git = "https://github.com/wireapp/rusty-jwt-tools.git", rev = "05e0e3243c2f3ad9da2c37599f7ad3f004f12d98" }
derive_more = { version = "2.0", features = [
  "from",
  "into",
  "try_from",
  "constructor",
  "display",
  "debug",
  "as_ref",
  "deref",
  "deref_mut",
] }
futures-util = "0.3"
hex = "0.4"

# Until devashishdxt/idb#36 is resolved, we're keeping our fork
idb = { git = "https://github.com/wireapp/idb", rev = "05573e5b29191fdeb442104ad1040346a3889822" }
itertools = "0.14"
log = { version = "0.4", features = ["kv_serde"] }
log-reload = "0.1.3"
macro_rules_attribute = "0.2"
mls-crypto-provider = { path = "mls-provider" }
obfuscate = { path = "obfuscate" }
pem = "3.0"
rand = { version = "0.8", features = ["getrandom"] }
rmp-serde = "1.3.0"
schnellru = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
smol = "2.0"
smol-macros = "0.1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tls_codec = "0.4.2"
typed-builder = "0.23.2"
uniffi = "0.29.4"
url = "2.5"
uuid = "1.19"
x509-cert = "0.2"
zeroize = "1.8"

certval = { git = "https://github.com/wireapp/rust-pki.git", branch = "wire/stable", package = "certval", default-features = false, features = [
  "revocation",
] }
const-oid = { version = "0.9", default-features = false, features = ["std"] }
der = { version = "0.7", default-features = false, features = ["std"] }
ecdsa = { version = "0.16", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false }
flagset = { version = "0.4", default-features = false }
getrandom = { version = "0.2.8", default-features = false }
jwt-simple = { version = "0.13", git = "https://github.com/wireapp/rust-jwt-simple", tag = "v0.13.0-pre.core-crypto-1.0.0", default-features = false }
p256 = { version = "0.13", default-features = false }
p384 = { version = "0.13", default-features = false }
p521 = { version = "0.13", default-features = false }
signature = { version = "2", default-features = false }
time = { version = "0.3", default-features = false }
web-time = { version = "1.1.0", default-features = false }
anyhow = { version = "1.0", default-features = false }

env_logger = "0.11"
html_parser = { version = "0.7", default-features = false }
lazy_static = { version = "1.4", default-features = false }
openidconnect = { version = "4", default-features = false }
rstest = { version = "0.26", default-features = false }
rstest_reuse = { version = "0.7", default-features = false }
scraper = { version = "0.25", default-features = false }
tokio = { version = "1.48", default-features = false }
wasm-bindgen-test = { version = "0.3", default-features = false }
webbrowser = { version = "1.0", default-features = false }
http = { version = "1", default-features = false }
hyper = { version = "1.8", default-features = false }
keycloak = "26.4.0"
native-tls = { version = "0.2", default-features = false }
oauth2 = { version = "5", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "native-tls",
] }
testcontainers = { version = "0.26", features = ["reusable-containers"] }

# our OpenMLS fork
openmls = { git = "https://github.com/wireapp/openmls", rev = "c9cde17076508968c9cbead5728454f0a1f60c4f", version = "1" }
openmls_basic_credential = { git = "https://github.com/wireapp/openmls", rev = "c9cde17076508968c9cbead5728454f0a1f60c4f", version = "0.2" }
openmls_traits = { git = "https://github.com/wireapp/openmls", rev = "c9cde17076508968c9cbead5728454f0a1f60c4f", version = "0.2" }
openmls_x509_credential = { git = "https://github.com/wireapp/openmls", rev = "c9cde17076508968c9cbead5728454f0a1f60c4f", version = "0.2" }

# proteus
proteus-traits = { git = "https://github.com/wireapp/proteus", tag = "v2.1.1" }
proteus-wasm = { git = "https://github.com/wireapp/proteus", tag = "v2.1.1" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
# ! Important: Do NOT enable stripping.
# ! This will cause the FFI to stop working because UniFFI stores the Rust <-> cdylib mapping
# ! in the `.strtab` section of the executable. Stripping this causes everything to stop functioning.
strip = false
# panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3
