[package]
name = "core-anycrypto"
version = "0.0.0"
edition = "2021"

[features]
default = []

[dependencies]
eyre = "0.6"
thiserror = "1.0"
uuid = "0.8"
openmls = "0.4.0-pre"
openmls_rust_crypto = "0.1.0-pre"
openmls_traits = "0.1.0-pre"
proteus = "1.0"

[dependencies.core-crypto-keystore]
version = "0.1.0"
path = "../keystore"

[dependencies.mls-crypto-provider]
version = "0.1.0"
path = "../mls-provider"
