[package]
name = "crypto-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = "0.4"
openmls_traits = "0.1"
openmls_rust_crypto = "0.1"
core-crypto = { version = "0.2", path = "../crypto" }
core-crypto-keystore = { version = "0.2", path = "../keystore" }
mls-crypto-provider = { version = "0.2", path = "../mls-provider" }
base64 = "0.13.0"

uuid = "1.1"
clap = { version = "3", features = ["derive"] }