[package]
name = "core-distribution-service"
version = "0.0.1"
edition = "2021"

[features]
default = ["sqlx-sqlite", "ws"]
ws = ["actix-web-actors"]
gql = ["async-graphql", "async-graphql-actix-web"]
gql_playground = ["gql"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]

[dependencies]
dotenv = "0.15"
listenfd = "0.3"
actix = "0.12"
actix-web = "4.0.0-beta"
actix-web-actors = { version = "4.0.0-beta", optional = true }
actix-cors = "0.6.0-beta"
actix-identity = "0.4.0-beta"
thiserror = "1.0"
color-eyre = "0.5"
tracing = "0.1"
tracing-actix-web = "0.5.0-beta"
tracing-subscriber = "0.3"
async-graphql-actix-web = { version = "3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
actix-utils = "3.0.0"
hex = "0.4.3"


[dependencies.sea-orm]
version = "0.5"
features = ["macros", "runtime-actix-rustls"]
default-features = false

[dependencies.async-graphql]
version = "3.0"
features = ["tracing", "apollo_tracing", "apollo_persisted_queries", "dataloader"]
optional = true
