[package]
name = "core-crypto-ffi"
description = "Platform-specific bindings (Android, iOS, WASM) for CoreCrypto"
repository = "https://github.com/wireapp/core-crypto"
version = "1.0.0-rc.56-hotfix.2"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
name = "core_crypto_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[features]
default = ["proteus"]
proteus = ["core-crypto/proteus", "core-crypto/cryptobox-migrate"]
debug-logging = ["dep:log", "dep:femme"] # HAZMAT: Will dump dangerous data

[dependencies]
thiserror = "1.0"
cfg-if = "1.0"
futures-util = "0.3"
async-trait = "0.1"
tls_codec = { workspace = true }
async-lock = "3.3"

# Logging stuff for `debug-logging` feature
femme = { version = "2", optional = true }

[dependencies.log]
version = "0.4"
optional = true
features = [
    "max_level_trace",
    "release_max_level_trace"
]

# see https://github.com/RustCrypto/hashes/issues/404
[target.'cfg(not(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86")))'.dependencies]
sha2 = { version = "0.10", features = ["force-soft"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# UniFFI - Android + iOS bindings - Runtime support
uniffi = { workspace = true }
core-crypto = { version = "^1.0.0-rc.56-hotfix.2", path = "../crypto", features = ["uniffi"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
web-sys = "0.3"
strum = "0.26"
core-crypto = { version = "^1.0.0-rc.56-hotfix.2", path = "../crypto" }


# UniFFI - Android + iOS bindings - Build support
[target.'cfg(not(target_family = "wasm"))'.build-dependencies.uniffi]
workspace = true
features = ["build", "bindgen"]

[build-dependencies]
cfg-if = "1.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals", "--enable-threads", "--detect-features"]
