[package]
name = "core-crypto-ffi"
description = "Platform-specific bindings (Android, iOS, WASM) for CoreCrypto"
repository = "https://github.com/wireapp/core-crypto"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
name = "core_crypto_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[features]
default = ["proteus"]
proteus = ["core-crypto/proteus", "core-crypto/cryptobox-migrate", "dep:proteus-wasm", "dep:core-crypto-keystore"]

[dependencies]
thiserror.workspace = true
cfg-if.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tls_codec.workspace = true
async-lock.workspace = true
log.workspace = true
log-reload.workspace = true
serde_json.workspace = true
proteus-wasm = { workspace = true, optional = true }
core-crypto-keystore = { workspace = true, optional = true}

# see https://github.com/RustCrypto/hashes/issues/404
[target.'cfg(not(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86")))'.dependencies]
sha2 = { version = "0.10", features = ["force-soft"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# UniFFI - Android + iOS bindings - Runtime support
uniffi.workspace = true
core-crypto = { workspace = true, features = ["uniffi"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
js-sys = "0.3"
web-sys = "0.3"
strum.workspace = true
core-crypto.workspace = true

# UniFFI - Android + iOS bindings - Build support
[target.'cfg(not(target_family = "wasm"))'.build-dependencies.uniffi]
workspace = true
features = ["build", "bindgen"]

[build-dependencies]
cfg-if = "1.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals", "--enable-threads", "--detect-features"]
