[package]
name = "core-crypto-ffi"
description = "Platform-specific bindings (Android, iOS, WASM) for CoreCrypto"
repository = "https://github.com/wireapp/core-crypto"
version = "9.0.1"
edition = "2024"
license = "GPL-3.0-only"
publish = false

[lib]
name = "core_crypto_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[lints]
workspace = true

[features]
default = ["proteus"]
proteus = ["core-crypto/proteus", "dep:proteus-wasm"]
wasm = []

[dependencies]
async-lock.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
core-crypto-keystore.workspace = true
core-crypto-macros.workspace = true
core-crypto.workspace = true
derive_more.workspace = true
futures-util.workspace = true
hex.workspace = true
log-reload.workspace = true
log.workspace = true
mls-crypto-provider.workspace = true
obfuscate = { workspace = true, features = ["openmls"] }
paste = "1.0.15"
proteus-wasm = { workspace = true, optional = true }
rmp-serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tls_codec.workspace = true

# UniFFI - Android + iOS bindings - Runtime support
uniffi.workspace = true

# see https://github.com/RustCrypto/hashes/issues/404
[target.'cfg(not(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86")))'.dependencies]
sha2 = { version = "0.10", features = ["force-soft"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook.workspace = true

[build-dependencies]
cfg-if = "1.0"
uniffi = { workspace = true, features = [
  "build",
  "bindgen",
  "wasm-unstable-single-threaded",
] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Os",
  "--enable-mutable-globals",
  "--enable-threads",
  "--detect-features",
]

[dev-dependencies]
testing_logger = "0.1.1"
macro_rules_attribute.workspace = true
smol-macros.workspace = true
