[package]
name = "core-crypto-macros"
description = "Macros for core-crypto"
repository = "https://github.com/wireapp/core-crypto"
version = "6.0.1"
edition = "2024"
license = "GPL-3.0-only"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
