[package]
name = "decode"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.90"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
clap-stdin = "0.8.0"
mls-rs = "0.51.0"
proteus-wasm = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
wire-e2e-identity = { workspace = true, features = ["builder"] }
