[package]
name = "decode"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-stdin = "0.8.1"
mls-rs = "0.53.0"
proteus-wasm = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
wire-e2e-identity = { workspace = true, features = ["builder"] }
