[package]
name = "wire-e2e-identity"
description = "Public API for Wire end to end identity"
version = "0.12.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
rusty-acme = { version = "0.12.0", path = "../acme" }
rusty-jwt-tools = { version = "0.12.0", path = "../jwt" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jwt-simple = { workspace = true }
derive_more = { workspace = true, features = ["deref", "from", "into"] }
url = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true, optional = true }
x509-cert = { workspace = true, optional = true }
time = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
signature = { workspace = true, optional = true }

[dev-dependencies]
wire-e2e-identity = { version = "0.12.0", path = ".", features = ["builder"] }
rusty-jwt-tools = { version = "0.12.0", path = "../jwt", features = [
    "test-utils",
    "rsa",
] }
base64 = { workspace = true }
url = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
wasm-bindgen-test = { workspace = true }
hex = { workspace = true }
webbrowser = { workspace = true }
shlex = "1"
const-oid.workspace = true

openidconnect = { workspace = true }
html_parser = { workspace = true }
scraper = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
lazy_static = { workspace = true }
portpicker = { workspace = true }
pem = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
reqwest = { workspace = true, features = ["json", "cookies"] }
tokio = { workspace = true, features = ["macros"] }
hyper = { workspace = true, features = ["server"] }
native-tls = { workspace = true, features = ["vendored"] }
testcontainers = { workspace = true }
oauth2 = { workspace = true, features = ["reqwest"] }
http = { workspace = true }
keycloak = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies.uuid]
workspace = true
features = ["std", "js"]


[features]
default = []
builder = ["dep:x509-cert", "rusty-jwt-tools/test-utils"]
